<resources>
    <string name="app_name">All My Friends</string>
    <string name="profile_picture">Profile picture</string>
    <string name="person_name">%1$s %2$s</string>
    <string name="location">%1$d %2$s %3$s %4$s %5$s</string>
    <string name="location_icon">Location icon</string>
    <string name="nationality_icon">Nationality icon</string>
    <string name="birthday_icon">Birthday icon</string>
    <string name="gender_icon">Gender icon</string>
    <string name="contact">Contact</string>
    <string name="email_icon">Email icon</string>
    <string name="home_phone_title">Home :</string>
    <string name="mobile_phone_title">Mobile :</string>
    <string name="reconnect_to_internet">Please reconnect to the internet to refresh the page</string>
    <string name="dismiss">Dismiss</string>
    <string name="offline_mode">Offline mode</string>
    <string name="phone_icon">Phone icon</string>

</resources>